--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
 	"name": "fundamentos-nodejs",
-	"type": "module",
 	"version": "1.0.0",
 	"main": "server.js",
 	"scripts": {
-		"dev": "node --watch src/server.js"
+		"start:dev": "tsx watch src/server.ts",
+		"upload": "tsx streams/upload-csv.ts"
 	},
 	"author": "Tiago Faria",
 	"license": "MIT",
 	"dependencies": {
 		"csv-parse": "^5.5.5"
+	},
+	"devDependencies": {
+		"@types/node": "^22.7.5",
+		"tsx": "^4.19.1",
+		"typescript": "^5.6.3"
 	}
 }
