--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "node16"
+    "moduleResolution": "node16",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
