--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"scripts": {
 		"start:dev": "tsx watch src/server.ts",
 		"lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
+		"lint:fix": "eslint src --ext .ts --fix",
+		"test": "vitest run",
+    "test:watch": "vitest",
 		"upload": "tsx streams/upload-csv.ts"
 	},
 	"author": "Tiago Faria",
@@ -18,6 +20,8 @@
 		"@types/node": "^22.7.5",
 		"eslint": "8.57.0",
 		"tsx": "^4.19.1",
-		"typescript": "^5.6.3"
+		"typescript": "^5.6.3",
+		"vite-tsconfig-paths": "4.3.2",
+		"vitest": "^2.1.2"
 	}
 }
