criação de teste unitário para o caso de uso de listagem de tasks

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"lint": "eslint src --ext .ts",
 		"lint:fix": "eslint src --ext .ts --fix",
 		"test": "vitest run",
-    "test:watch": "vitest",
+		"test:watch": "vitest",
 		"upload": "tsx streams/upload-csv.ts"
 	},
 	"author": "Tiago Faria",
@@ -16,6 +16,7 @@
 		"csv-parse": "^5.5.5"
 	},
 	"devDependencies": {
+		"@faker-js/faker": "^9.0.3",
 		"@rocketseat/eslint-config": "^2.2.2",
 		"@types/node": "^22.7.5",
 		"eslint": "8.57.0",
