--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"author": "Tiago Faria",
 	"license": "MIT",
 	"dependencies": {
+		"@prisma/client": "^5.20.0",
 		"csv-parse": "^5.5.5"
 	},
 	"devDependencies": {
@@ -20,6 +21,7 @@
 		"@rocketseat/eslint-config": "^2.2.2",
 		"@types/node": "^22.7.5",
 		"eslint": "8.57.0",
+		"prisma": "^5.20.0",
 		"tsx": "^4.19.1",
 		"typescript": "^5.6.3",
 		"vite-tsconfig-paths": "4.3.2",
