--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 	"license": "MIT",
 	"dependencies": {
 		"@prisma/client": "^5.20.0",
-		"csv-parse": "^5.5.5"
+		"csv-parse": "^5.5.5",
+		"fastify": "^5.0.0",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^9.0.3",
