--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"main": "server.js",
 	"scripts": {
-		"start:dev": "tsx watch src/server.ts",
+		"start:dev": "tsx watch src/infra/server.ts",
 		"lint": "eslint src --ext .ts",
 		"lint:fix": "eslint src --ext .ts --fix",
 		"test": "vitest run",
